source/assets/styles/userInfo.css
.myUploadRecipeCardGridContainer {
    height: 480px;
    overflow: auto;
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 10px;
    margin: 20px;
    align-items: center;
    text-align: center;
}

.mySavedRecipeCardGridContainer {
    height: 480px;
    overflow: auto;
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 10px;
    margin: 20px;
    align-items: center;
    text-align: center;
}


.userInfoGridItem {
    padding: 10px;
    font-size: 30px;
    text-align: center;
}

#userName {
    margin: 0;
}

#userCard {
    margin-left: 100px;
    margin-top: 50px;
    background-color: #d6d6d6;
    border-radius: 2cm;
    font-family: "Open Sans", sans-serif;
    margin-bottom: 600px;
    box-shadow: 2px 2px #4e598c;
}

#userInfo {
    font-family: "Open Sans", sans-serif;
    background-color: #ededed;
}

#userInfo #myRecipes,
#userInfo #savedRecipes {
    color: #4e598c;
    font-weight: bold;
}

#userInfo #userName {
    color: #fcaf58;
}

#userInfo #userEmail {
    color: #4e598c;
    font-size: 70%;
}

#userInfo #createRecipePageButton {
    padding: 10px;
    background: transparent;
    color: #fcaf58;
    font-size: 50%;
    border: 5px solid #fcaf58;
    border-radius: 5px;
    cursor: pointer;
}

#userInfo #createRecipePageButton:hover {
    padding: 10px;
    background: #fcaf58;
    color: white;
    font-size: 50%;
    border: 5px solid #fcaf58;
    border-radius: 5px;
    cursor: pointer;
}

